fix: Dashboard UI

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <meta name="theme-color" content="#198057" />
+    <link rel="icon" href="/images/logo.png" />
     <title>sabkaBazzar</title>
   </head>
   <body>
